Supervisor refactored